# cefi_data_mcp_client

./: LICENSE  client.py  gemini_test.py  pyproject.toml
